Fix layout shift

--- a/src/components/Navigation/index.css
+++ b/src/components/Navigation/index.css
@@ -37,8 +37,12 @@
   column-gap: 5px;
   text-decoration: none;
   padding: 10px 15px;
+  border: 2px solid transparent;
+  border-radius: 10px;
 }
-
+.profile-link {
+  justify-content: center;
+}
 .nav-link.active {
   border: 2px solid var(--primary-color);
   border-radius: 10px;
@@ -58,6 +62,9 @@
     width: auto;
     padding: 10px;
   }
+  .nav-link {
+    justify-content: center;
+  }
   .nav-link span {
     display: none;
   }
@@ -65,10 +72,13 @@
 
 @media screen and (max-width: 480px) {
   .nav-bar {
-    width: 200px;
+    width: 180px;
   }
   .nav-menu {
     height: calc(100% - 50px);
+  }
+  .nav-link {
+    justify-content: start;
   }
   .nav-link span {
     display: unset;
